force-app/main/default/objects/Opportunity_Status_Update__mdt/Opportunity_Status_Update__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Status Update</label>
    <pluralLabel>Opportunity Status Updates</pluralLabel>
</CustomObject>