force-app/main/default/objects/Opportunity_Status_Update__mdt/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>