force-app/main/default/objects/Opportunity_Status_Update__mdt/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>RecordTypeId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>