force-app/main/default/objects/Opportunity_Status_Update__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>