force-app/main/default/objects/Opportunity_Status_Update__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Activity_Type__c</columns>
    <columns>RecordTypeId__c</columns>
    <columns>Status__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>