force-app/main/default/objects/Opportunity_Status_Update__mdt/listViews/Allall.listView-meta.xml
<ListView>
    <fullName>Allall</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Activity_Type__c</columns>
    <columns>RecordTypeId__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>